network/mesh/authz-policies/deny-all-default.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: enterprise-agent-mesh
spec: {}
